--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <!-- Meta Basics -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
+
     <title>rentitnownow</title>
 
 
