--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/src/assets/favicon.png" type="image/png">
   </head>
 
   <body>
